hphp/hack/test/typecheck/reactive/rx_move7.php.exp
File "rx_move7.php", line 10, characters 10-19:
Rx\move is only allowed in argument position or as right hand side of the assignment. (Naming[2096])
